# BrightEyes-MCS-File

./: BrightEyes_MCSLL_registers.md  BrightEyes_MCS_File_and_FLIM_explanation.md  BrightEyes_MCS_File_and_FLISM_explanation.md  OME_Zarr NOTES.txt  README.md  brighteyes_h5_current_schema.txt  datah5.ipynb  pyproject.toml  requirements.txt  upgrade_scheme.txt
.github/workflows/: release.yml
examples/: Calibrate_h5_file_Workflow.ipynb  brighteyes_attempt_h5_current_schema_and_analysis_group_proposal.txt  brighteyes_attempt_h5_schema_v0_1_2_description.txt  brighteyes_attempt_h5_schema_v0_1_2_future_implementation_request.txt  h5_structure_restructure_proposal copy.txt  h5_structure_restructure_proposal.txt  h5_structure_restructure_proposal_v2_acquisition_aware.txt  test.ipynb
src/brighteyes_mcs_dataprep/: __init__.py  alignment.py  channel_skew_estimator.py  h5_data_calibrator.py  h5_file_hash.py  h5_output_writers.py  tools_phasor.py
src/brighteyes_mcs_file/: __init__.py  alignment.py  channel_skew_estimator.py  graph.py  h5_data_calibrator.py  h5_output_builder.py  h5_output_loaders.py  h5_output_writers.py  mcs.py  tools_phasor.py
tests/: test_convert_h5_raw.py  test_h5_output_loaders.py  test_h5_output_writers.py  test_mcs_reader.py  test_period_ns_prevents_dfd_fallback.py
