[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brighteyes-mcs-dataprep"
version = "0.1.0"
description = "Calibration, output-building, and data preparation utilities for BrightEyes MCS HDF5 files."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Mattia Donato", email = "mattia.donato@iit.it" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "build",
    "brighteyes-mcs-reader",
    "h5py",
    "joblib",
    "jupyter",
    "matplotlib",
    "numpy",
    "pandas",
    "pytest",
    "scipy",
    "torch",
    "twine",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/VicidominiLab/BrightEyes-MCS-DataPrep"
Repository = "https://github.com/VicidominiLab/BrightEyes-MCS-DataPrep"

[tool.setuptools.packages.find]
where = ["src"]
